testdata/baselines/reference/submodule/conformance/symbolType2.errors.txt
symbolType2.ts(2,7): error TS2322: Type 'unique symbol' is not assignable to type 'object'.


==== symbolType2.ts (1 errors) ====
    Symbol.isConcatSpreadable in {};
    "" in Symbol.toPrimitive;
          ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'unique symbol' is not assignable to type 'object'.